<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itesm.mx.listacontactos.AgregarActivity">

    <TextView
        android:id="@+id/textView_agregar_contacto_titulo"
        android:layout_width="244dp"
        android:layout_height="36dp"
        android:text="@string/agregar_contacto_titulo"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/imageButton_elige_imagen"
        android:layout_alignStart="@+id/imageButton_elige_imagen"
        android:layout_marginTop="23dp" />

    <EditText
        android:id="@+id/editText_nombre_contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nombre_contacto"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="97dp"
        android:layout_above="@+id/editText_numero_contacto"
        android:layout_alignLeft="@+id/editText_numero_contacto"
        android:layout_alignStart="@+id/editText_numero_contacto"
        android:layout_marginBottom="17dp" />

    <EditText
        android:id="@+id/editText_numero_contacto"
        android:hint="@string/numero_contacto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="149dp"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_above="@+id/spinner_categoria"
        android:layout_alignLeft="@+id/imageButton_elige_imagen"
        android:layout_alignStart="@+id/imageButton_elige_imagen"
        android:layout_marginBottom="18dp" />

    <ImageButton
        android:id="@+id/imageButton_elige_imagen"
        android:layout_width="217dp"
        android:layout_height="160dp"
        android:background="@drawable/camera"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="267dp"
        android:layout_above="@+id/button_agregar_contacto"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <ImageView
        android:id="@+id/imageView_agregar"
        android:layout_width="49dp"
        android:layout_height="42dp"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:layout_editor_absoluteY="38dp"
        tools:layout_editor_absoluteX="36dp"
        android:layout_alignTop="@+id/textView_agregar_contacto_titulo"
        android:layout_toLeftOf="@+id/textView_agregar_contacto_titulo"
        android:layout_toStartOf="@+id/textView_agregar_contacto_titulo"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <Spinner
        android:id="@+id/spinner_categoria"
        android:layout_width="159dp"
        android:layout_height="35dp"
        tools:layout_editor_absoluteY="208dp"
        tools:layout_editor_absoluteX="170dp"
        android:layout_marginBottom="22dp"
        android:layout_above="@+id/imageButton_elige_imagen"
        android:layout_toRightOf="@+id/textView_categoria"
        android:layout_toEndOf="@+id/textView_categoria"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

    <Button
        android:id="@+id/button_agregar_contacto"
        android:layout_width="115dp"
        android:layout_height="54dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="@string/agregar_contacto"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="441dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp" />

    <TextView
        android:id="@+id/textView_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="221dp"
        android:layout_alignBottom="@+id/spinner_categoria"
        android:layout_alignLeft="@+id/editText_numero_contacto"
        android:layout_alignStart="@+id/editText_numero_contacto" />

</RelativeLayout>
