<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="itesm.mx.listacontactos.PermisosActivity">

    <EditText
        android:id="@+id/password_contrasena"
        android:hint = "@string/contrasena"
        android:layout_width="249dp"
        android:layout_height="39dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="285dp"
        android:layout_below="@+id/image_engrane"
        android:layout_alignRight="@+id/image_engrane"
        android:layout_alignEnd="@+id/image_engrane"
        android:layout_marginTop="24dp" />

    <EditText
        android:id="@+id/password_confirmar_contrasena"
        android:hint="@string/confirmar_contrasena"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="textPassword"
        tools:layout_editor_absoluteY="351dp"
        tools:layout_editor_absoluteX="69dp"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/password_contrasena"
        android:layout_alignRight="@+id/password_contrasena"
        android:layout_alignEnd="@+id/password_contrasena" />

    <Button
        android:id="@+id/button_aceptar"
        android:layout_width="112dp"
        android:layout_height="56dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/aceptar"
        tools:layout_editor_absoluteX="136dp"
        tools:layout_editor_absoluteY="427dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp" />

    <ImageView
        android:id="@+id/image_llave"
        android:layout_width="98dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/llave"
        tools:layout_editor_absoluteX="64dp"
        tools:layout_editor_absoluteY="172dp"
        android:layout_alignBottom="@+id/image_engrane"
        android:layout_toLeftOf="@+id/button_aceptar"
        android:layout_toStartOf="@+id/button_aceptar" />

    <ImageView
        android:id="@+id/image_engrane"
        android:layout_width="191dp"
        android:layout_height="217dp"
        app:srcCompat="@drawable/engrane"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="26dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/image_llave"
        android:layout_toEndOf="@+id/image_llave"
        android:layout_marginTop="12dp" />
</RelativeLayout>
